apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__default_config_has_defaults.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 664
expression: "Configuration::default().validated_yaml"
---
plugins: ~
