apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__expansion_failure_missing_variable.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 545
expression: error.to_string()
---
could not expand variable: TEST_CONFIG_UNKNOWN_WITH_NO_DEFAULT, environment variable not found
