apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__expansion_failure_unknown_mode.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 562
expression: error.to_string()
---
could not expand variable: unknown.TEST_CONFIG_UNKNOWN_WITH_NO_DEFAULT. Variables must be prefixed with one of 'env' followed by '.' e.g. 'env.'
