apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__it_does_not_leak_env_variable_values.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 471
expression: error.to_string()
---
configuration had errors: 
1. at line 3

  
  supergraph:
    introspection: ${env.TEST_CONFIG_NUMERIC_ENV_UNIQUE:-true}
                   ^----- "${env.TEST_CONFIG_NUMERIC_ENV_UNIQUE:-true}" is not of type "boolean"
