apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__line_precise_config_errors.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 214
expression: error.to_string()
---
configuration had errors: 
1. at line 3

  
  plugins:
┌   non_existant:
|     foo: "bar"
└-----> Additional properties are not allowed ('non_existant' was unexpected)

2. at line 7

    non_existant:
      foo: "bar"
  
  telemetry:
┌   another_non_existant: 3
└-----> Additional properties are not allowed ('another_non_existant' was unexpected)
