apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__line_precise_config_errors_with_errors_after_first_field.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 232
expression: error.to_string()
---
configuration had errors: 
1. at line 6

  supergraph:
    # The socket address and port to listen on
    # Defaults to 127.0.0.1:4000
    listen: 127.0.0.1:4000
┌   bad: "donotwork"
└-----> Additional properties are not allowed ('bad' was unexpected)

1. at line 7

    # The socket address and port to listen on
    # Defaults to 127.0.0.1:4000
    listen: 127.0.0.1:4000
    bad: "donotwork"
┌   another_one: true
└-----> Additional properties are not allowed ('another_one' was unexpected)
