apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__line_precise_config_errors_with_sequence.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 286
expression: error.to_string()
---
configuration had errors: 
1. at line 9

    listen: 127.0.0.1:4000
  cors:
    allow_headers:
      - Content-Type
      - 5
        ^----- 5 is not of type "string"
